@@ -66,6 +66,8 @@ Changes in version 2.3.3
 
    o stk_example_doe03.m: Use the appropriate flag for maximization.
 
+   o mole/matlab/file_in_path.m: Fix two bugs (Matlab only)
+
 o Minor changes
 
    o stk_example_doe03.m: Display pointwise credible intervals in the upper
